<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_ground"
    tools:context=".OrderTwoActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@color/light_blue"
        android:paddingBottom="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:hint="@string/search"
            android:textSize="23sp"
            android:textStyle="italic" />
    </com.google.android.material.textfield.TextInputLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_search"
        android:layout_alignStart="@+id/edt_search"
        android:layout_alignEnd="@+id/edt_search"
        android:layout_marginTop="10dp"
        android:divider="@color/white"
        android:showDividers="middle">

        <TableRow
            android:background="@color/moderate_blue"
            android:divider="@color/black"
            android:gravity="center"
            android:showDividers="middle">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/list_dish"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/quantity"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/into_money"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/note"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:background="@color/back_ground"
            android:divider="@color/black"
            android:gravity="center"
            android:showDividers="middle"
            >
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_list_dish"
                android:layout_width="0dp"
                android:layout_weight="1"
                ></androidx.recyclerview.widget.RecyclerView>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="center">
                <ImageButton
                    android:id="@+id/img_btn_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tv_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="@color/black"
                    />
                <ImageButton
                    android:id="@+id/img_btn_minus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <TextView
                android:id="@+id/tv_price"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="100.000d"
                android:textColor="@color/black"
                android:textAlignment="center"></TextView>
            <TextView
                android:id="@+id/tv_note"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="Ghi chú"
                android:textColor="@color/black"
                android:textAlignment="center"></TextView>
        </TableRow>
    </TableLayout>

</RelativeLayout>