<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:background="@color/back_ground">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5">
        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:textAlignment="textStart"
            android:text="@string/username"
            android:textColor="@color/black"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_username"
            app:placeholderText="Nhập tên tài khoản"
            app:placeholderTextColor="@color/grey"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:textColor="@color/black"
                android:backgroundTint="@color/moderate_blue"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tl_username"
            android:layout_alignStart="@+id/tl_username"
            android:text="@string/password"
            android:textColor="@color/black"/>
        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_password"
            app:placeholderText="Nhập mật khẩu"
            app:placeholderTextColor="@color/grey"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black"

            >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:backgroundTint="@color/moderate_blue"
            />
        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal|bottom"
        android:layout_weight="0.5"
        android:paddingBottom="20dp">
        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="@drawable/btn_login_custom"/>
    </LinearLayout>

</LinearLayout>